# cloudx

./: .gitignore  CHANGE_THEMES.md  LICENSE  README.md  REVIEW_TRACKING.md  SECURITY.md  SESSION_ISSUES.md  install.sh  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/server/: package.json  tsconfig.json
apps/server/src/: aiModelOptions.ts  asrClient.test.ts  asrClient.ts  config.test.ts  config.ts  configSecretStore.ts  configService.test.ts  configService.ts  fileTransfer.test.ts  fileTransfer.ts  index.ts  jsonStateFile.test.ts  jsonStateFile.ts  localWebProxy.ts  pathBoundary.ts  pathPolicy.test.ts  pathPolicy.ts  pluginRegistry.test.ts  pluginRegistry.ts  server.test.ts  server.ts  sessionStore.test.ts  sessionStore.ts  statePersistence.ts  urlRedaction.ts
apps/server/src/appServer/: AppServerClient.test.ts  AppServerClient.ts  AppServerContextProvider.test.ts  AppServerContextProvider.ts
apps/server/src/archive/: ArchiveExtractionService.test.ts  ArchiveExtractionService.ts
apps/server/src/automation/: AutomationCatalogService.test.ts  AutomationCatalogService.ts  AutomationCompiler.test.ts  AutomationCompiler.ts  AutomationExecutor.test.ts  AutomationExecutor.ts  AutomationRepository.test.ts  AutomationRepository.ts  AutomationService.test.ts  AutomationService.ts  AutomationTypeService.test.ts  (+1 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.test.ts  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: api.test.ts  api.ts  main.tsx  styles.css
debug_tooling/documentation-validation/: README.md  run_validation.py
docs/: .gitignore  AUTOMATION_CODE_EXECUTION.md  DOCUMENTATION_MANAGEMENT_PLUGIN_DESIGN.md  JIRA_INTEGRATION_IMPLEMENTATION.md  LAUNCH_COPY.md  MEMORY_PLUGIN_GUIDE.md  MEMORY_PLUGIN_GUIDE.qmd  MOTIVATION.md  SECURITY_MODEL.md  SETUP.md  TODO.md  WEB_APP_PLAN.md  automation-catalog-coverage.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md
scripts/: capture-readme-screenshots.mjs  create-local-cert.mjs  install-cloudx.mjs  install-cloudx.test.mjs  setup-cloudx-whisper-service.mjs  setup-test-environment.mjs
services/asr/: pyproject.toml
services/asr/src/cloudx_asr/: main.py
services/asr/tests/: test_main.py
services/documentation-indexer/: pyproject.toml
services/documentation-indexer/src/cloudx_documentation_indexer/: __init__.py  archive.py  extraction.py  main.py  vendor_code.py
services/documentation-indexer/tests/: test_archive.py
(+145 files in other folders)
