[project]
name = "cloudx-asr"
version = "0.1.0"
description = "Local Faster Whisper service for Cloudx voice control"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "faster-whisper>=1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
